# example-python

./: .coverage  .gitignore  .travis.yml  LICENSE.md  README.md  README.md gaza  README.rst  WORKSPACE.bazel  azure-pipelines.yml  bitrise.yml  circle.yml  codecov.yml  codecov_cli.yml  coverage-fake.xml  coverage.xml  fake-file.txt  main.py  package-lock.json  package.json  requirements.txt  setup.py  test_root.py  tests.py  time.txt
.artifacts/: README.md
.circleci/: config.yml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci-pr.yml  ci.yml  ci.ymlAbdo  coverage.yml  github-actions-demo.yml  test.yml
.harness/: Build_codecov_example_python_1782243281624-pr-trigger-input-set-1782243283201.yaml  Build_codecov_example_python_1782243281624-push-trigger-input-set-1782243284714.yaml  input-set-default.yml  pipeline.yml  pipelines.yml
.harness/pipelines/: example-python-1782243273911.yaml  example-python.yaml
app/: .coverage  BUILD.bazel  calculator.py  codecov_wrapper.sh  expression.py  expression_parser.py  smiles.py  test_calculator.py
app/expression_parser/: __init__.py  exceptions.py  helpers.py
app/projectA/: BUILD.bazel  calculator.py  codecov_wrapper.sh  test_calculator.py
app/projectB/: BUILD.bazel  adder.py  test_adder.py
app/random/: __init__.py
app/smiles/: smiles.py  test_smiles.py
awesome/: __init__.py  test.py
meow/app/: test_calculator.py
tests/: __init__.py  frown.py  smile.py  test_calculator.py  test_expression.py  test_expression_parser.py  test_random.py  test_sample.py
(+2 files in other folders)
